MU: sistemato sommario

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -60,7 +60,7 @@ Versione: \insertversion
 
 %\setlength{\parindent}{18pt} %settato indentazione di default 
 \section*{\LARGE Sommario:}
-Il presente documento descrive l'analisi dei costi e delle risorse effettuata dall'azienda WebShape per lo sviluppo del Capitolato C04.
+Il presente documento si propone di fornire la documentazione di supporto necessaria per l'utilizzo del prodotto.
 
  %SEZIONE SOMMARIO
 \indent \indent
@@ -161,9 +161,6 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 \newpage
 
 \sezione{Introduzione}
-
-\subsezione{Scopo del documento}
-Il presente documento si propone di fornire la documentazione di supporto necessaria per l'utilizzo del prodotto.\\
 
 \subsezione{Definizione dell'utente del prodotto}
 Il prodotto \`e pensato per tutti gli utenti che hanno conoscenze minime in ambiente di grafica vettoriale e che possiedono una connessione ad internet. Il sistema potr\`a anche essere usato da chiunque voglia estendere l'applicazione, secondo le norme che regolano la licenza d'utilizzo.\\
