Clone e erase metodi di visualization

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -409,7 +409,7 @@ Estende \textit{Button}.
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{getId()} ritorna  \textit{{\_}id};
-\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di selezione di una figura disegnata sul canvas.
+\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,eraseButton)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di selezione di una figura disegnata sul canvas.
 \end{elencopuntato}
 
 
