creato capitolo Sistemi Windows

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -216,7 +216,10 @@ Il programma non necessita di installazione.
 Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: Apache Tomcat. Oltre a essere un Web Server, Tomcat \`e anche un
 Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio Java.
 Prima di tutto bisogna scaricare Tomcat dal link del sito ufficiale \textit{http://tomcat.apache.org/download-60.cgi}\\
-Nella sezione \textit{Binary Distribution} della pagina web, \`e possibile effettuare il download sia per sistemi Windows che per sistemi Linux.
+Nella sezione \textit{Binary Distribution} della pagina web, \`e possibile effettuare il download sia per sistemi Windows che per sistemi Linux.\\
+\\
+\indent{\textbf{Installazione su sistemi Windows:}}\\
+\\
 Terminato il download, fare doppio click sul file scaricato per iniziare l'installazione.\\
 La schermata \`e la seguente:
 
@@ -256,6 +259,9 @@ Per completare l'installazione, premere su \textit{Install}.
 \caption{Java Virtual Machine}
 \end{figure} 
 
+\indent{\textbf{Installazione su sistemi Linux:}}\\
+\\
+(inserire qua)
  
 
  
