Glossario: aggiunti termini

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -84,6 +84,8 @@ Versione: \insertversion
 				\hline
 				{RR-RPP} &  Cunico Marco \\ & Dissegna Stefano \\
 				\hline
+				{RPP-RQ} &  Cunico Marco \\ \\
+				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
 			\caption{Lista Redattori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -108,6 +110,8 @@ Versione: \insertversion
 			{Pre-RR} &  Dissegna Stefano \\
 			\hline
 			{RR-RPP} & Geremia Mirco \\
+			\hline
+			{RPP-RQ} & \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -140,7 +144,11 @@ Versione: \insertversion
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-                    2.0 & 24$\slash$01$\slash$2009 Aggiunto termine, rilascio per RPP & Dissegna Stefano \\
+			2.2 & 06$\slash$03$\slash$2009 Aggiunta altri termini & Cunico Marco \\
+			\hline
+			2.1 & 10$\slash$02$\slash$2009 Aggiunta altri termini & Cunico Marco \\
+			\hline
+            2.0 & 24$\slash$01$\slash$2009 Aggiunto termine, rilascio per RPP & Dissegna Stefano \\
 			\hline
 		    1.2 & 22$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
 			\hline
@@ -177,6 +185,10 @@ Ajax \` e un acronimo di Asynchronous \hyperlink{javascript}{\underline{JavaScri
 Un browser web \` e un programma che consente agli utenti di visualizzare e interagire con testi, immagini e altre informazioni, tipicamente contenute in una pagina web di un sito (o all'interno di una rete locale).
 Il browser \` e in grado di interpretare il codice \hyperlink{html}{\underline{HTML}} e visualizzarlo in forma di ipertesto. Il browser consente perci\` o la navigazione nel web.\\
 
+\hypertarget{bytecode}{}
+\textbf{Bytecode:}
+Il Bytecode \` e un linguaggio intermedio pi\` u astratto del linguaggio macchina, usato per descrivere le operazioni che costituiscono un programma. \` E chiamato cos\` i perch\` e spesso le operazioni hanno un codice che occupa un solo byte, anche se la lunghezza dell'intera istruzione pu\` o variare perch\` e ogni operazione ha un numero specifico di parametri su cui operare.\\
+
 \section*{C}
 \hypertarget{canvas}{}
 \textbf{Canvas:}
@@ -185,6 +197,11 @@ Canvas \` e una estensione dell'\hyperlink{html}{\underline{HTML}} standard che 
 \hypertarget{client}{}
 \textbf{Client:}
 Client indica una componente che accede ai servizi o alle risorse di un'altra componente, detta \hyperlink{server}{\underline{server}}.\\
+
+\section*{D}
+\hypertarget{dom}{}
+\textbf{DOM:}
+DOM(Document Object Model) \` e una forma di rappresentazione dei documenti strutturati come modello orientato agli oggetti.\\
 
 \section*{E}
 \hypertarget{ecmascript}{}
@@ -195,6 +212,10 @@ Client indica una componente che accede ai servizi o alle risorse di un'altra co
 \hypertarget{gantt}{}
 \textbf{Gantt:}
 Il Diagramma di Gantt \` e uno strumento di supporto alla gestione dei progetti a rappresentazione temporale delle mansioni o attivit\`a che costituiscono il progetto. \\
+
+\hypertarget{grmfrm}{}
+\textbf{Grammatica formale:}
+Una Grammatica formale \` e un sistema di regole che delineano matematicamente un insieme (di solito infinito) di sequenze finite di simboli (stringhe) appartenenti ad un alfabeto anch'esso finito.\\
 
 \section*{H}
 \hypertarget{html}{}
@@ -207,6 +228,10 @@ L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di 
 HTML 5 \` e un \hyperlink{linguaggio di markup}{\underline{linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\ 
 
 \section*{J}
+\hypertarget{java}{}
+\textbf{Java:}
+Java \`e un linguaggio di programmazione orientato agli oggetti. La piattaforma di programmazione Java \`e fondata sul linguaggio stesso, sulla \hyperlink{jvm}{\underline{JVM}} e sulle API Java.\\
+
 \hypertarget{javascript}{}
 \textbf{JavaScript:}
 JavaScript (o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti comunemente usato nei siti web. \`E  uno standard ISO.\\
@@ -214,6 +239,14 @@ JavaScript (o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti 
 \hypertarget{JIT}{}
 \textbf{JIT:}
 Acronimo di Just In Time: si riferisce alla compilazione al volo di un programma un attimo prima della sua esecuzione.\\
+
+\hypertarget{jsp}{}
+\textbf{JSP:}
+JSP(JavaServer Pages) \`e una tecnologia \hyperlink{java}{\underline{Java}} per lo sviluppo di applicazioni \hyperlink{web}{\underline{Web}} che forniscono contenuti dinamici in formato \hyperlink{html}{\underline{HTML}} o \hyperlink{xml}{\underline{XML}}.\\
+
+\hypertarget{jvm}{}
+\textbf{JVM:}
+JVM(Java Virtual Machine) \`e la macchina virtuale che esegue i programmi in linguaggio Java \hyperlink{bytecode}{\underline{bytecode}}, ovvero i prodotti della compilazione dei sorgenti Java.\\
 
 \section*{L}
 \hypertarget{latex}{}
@@ -230,6 +263,14 @@ Un linguaggio di markup \`e un linguaggio che stabilisce delle convenzioni stand
 Con il termine Open Source si indica un tipo di licenza software in cui il codice sorgente viene reso disponibile; lo scopo dell'Open Source \`e quello di favorire la collaborazione tra gli sviluppatori e il progresso del software tramite la condivisione di idee.\\
 
 \section*{P}
+\hypertarget{parser}{}
+\textbf{Parser:}
+Il Parser \` e un programma che esegue il \hyperlink{parsing}{\underline{parsing}} o analisi sintattica.\\
+
+\hypertarget{parsing}{}
+\textbf{Parsing:}
+Il Parsing \` e il processo atto ad analizzare uno stream continuo in input in modo da determinare la sua struttura grammaticale grazie ad una data \hyperlink{grmfrm}{\underline{grammatica formale}}.\\
+
 \hypertarget{png}{}
 \textbf{PNG:}
 Il PNG (Portable Network Graphics) \`e un formato di file che permette di memorizzare immagini senza perdere informazioni.\\
@@ -253,12 +294,23 @@ Si veda \hyperlink{serverweb}{\underline{Server Web}}.\\
 \textbf{Server Web:}
 Un Server Web (o Server HTTP) \` e un processo, e per estensione il computer su cui \` e in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web d\` a vita al \hyperlink{www}{\underline{WWW}}.\\ 
 
+\hypertarget{servlet}{}
+\textbf{Servlet:}
+Le servlet sono oggetti che operano all'interno di un server per applicazioni e potenziano le sue funzionalit\` a.\\
 
 \hypertarget{svg}{}
 \textbf{SVG:}
 L' SVG (Scalable Vector Graphics) indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
 
 \section*{T}
+\hypertarget{tabhash}{}
+\textbf{Tabella di hash:}
+Una Tabella di hash \` e una struttura dati usata per mettere in corrispondenza una data chiave con un dato valore. Pu\` o usare qualsiasi tipo di dato come indice.\\
+
+\hypertarget{tomcat}{}
+\textbf{Tomcat:}
+Tomcat \` e un web container \hyperlink{opensource}{\underline{open source}} sviluppato dalla Apache Software Foundation. Implementa le specifiche \hyperlink{jsp}{\underline{JSP}} e \hyperlink{servlet}{\underline{Servlet}} di Sun Microsystems, fornendo quindi una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio \hyperlink{java}{\underline{Java}}. La sua distribuzione standard include anche le funzionalit\` a di \hyperlink{serverweb}{\underline{web server}} tradizionale.\\
+
 \hypertarget{toolbar}{}
 \textbf{Toolbar:}
 La toolbar (lett. barra degli strumenti) \` e un componente (\hyperlink{widget}{\underline{widget}}) molto diffuso nelle interfacce utente. \` E una barra orizzontale o verticale, o un box, che raccoglie, sotto forma di icone o pulsanti, i collegamenti alle funzioni pi\` u usate di un software.\\
