AR: aggiunta descrizione fonti

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -964,6 +964,8 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
   \end{center}
 \end{table}
 
+F01 = deriva dal capitolato    F02 = deriva dalla ditta 'WebShape'
+
 \newpage
 
  \subsezione{Tracciamento Requisiti - Use Case}
