--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -311,6 +311,8 @@ Classe concreta che si occupa delle operazioni di visualizzazione del canvas su 
 \item[-] \textit{getClickCoordsWithinTarget(event)} ritorna il punto esatto del canvas sul quale \`  e avvenuto il click  del mouse, differenziando le diverse interpretazioni che fa ciascun browser per uniformarle in un unico metodo funzionante universalmente.
 Le coordinate vengono poi adattate allo spostamento corrente della visualizzazione sommandogli \textit{{\_}offset}, e allo zoom corrente, moltiplicandole per \textit{{\_}scale.getFactor()}.
 \item[-] \textit{setCanvasDimension(canvasObj,height,width)} regola le dimensioni del canvas al caricamento della pagina in proporzione alla risoluzione del monitor dell'utente.
+\item[-] \textit{eraseElement(figureSet,canvasObj)} cancella l'elemento attualmente selezionato sul canvas tramite la pressione del pulsante apposito oppure con il tasto "canc" della tastiera;
+\item[-] \textit{cloneElement(actualFigure,canvasObj)} clona l'elemento attualmente selezionato tramite la pressione dell'apposito pulsante.
 \end{elencopuntato}
 
 \subsezione{Canvas}
@@ -409,7 +411,7 @@ Estende \textit{Button}.
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{getId()} ritorna  \textit{{\_}id};
-\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,eraseButton)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di selezione di una figura disegnata sul canvas.
+\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,eraseButton)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di selezione di una figura disegnata sul canvas e a tutte le operazioni disponibili su di essa.
 \end{elencopuntato}
 
 
@@ -432,7 +434,7 @@ Estende \textit{Button}.
 
 \subsezione{ZoomInButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe aconcreta che rappresenta pulsante che attiva le funzionalit\` a di ingrandimento dell'area di visualizzazione del canvas.
+Classe concreta che rappresenta pulsante che attiva le funzionalit\` a di ingrandimento dell'area di visualizzazione del canvas.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Estende \textit{ZoomButton}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -446,7 +448,7 @@ Estende \textit{ZoomButton}.
 
 \subsezione{ZoomOutButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe astrattache rappresenta pulsante che attiva le funzionalit\` a di rimpicciolimento dell'area di visualizzazione del canvas.
+Classe concreta che rappresenta pulsante che attiva le funzionalit\` a di rimpicciolimento dell'area di visualizzazione del canvas.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Estende \textit{ZoomButton}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -585,23 +587,6 @@ Estende \textit{Button}.
 \item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,borderColor)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di disegno di una linea a mano libera.
 \end{elencopuntato}
 
-\subsezione{CloneButton}
-\subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe concreta che rappresenta lo specifico pulsante che attiva le funzionalit\` a di clonazione di una figura.
-\subsubsezione{Relazioni d'uso di altre componenti}
-Estende \textit{Button}.
-\subsubsezione{Interfacce e relazioni di uso da altre componenti}
-\subsubsezione{Attivit\`a svolte e dati trattati}
-\textit{Page} e \textit{Toolbar} ne mantengono un' istanza.
-\paragrafo{Attributi privati:}
-\begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{{\_}id} l'attibuto HTML \textit{id} del pulsante.
-\end{elencopuntato}
-\paragrafo{Metodi pubblici:}
-\begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{getId()} ritorna \textit{{\_}id};
-\item[-] \textit{getBuilder()} ritorna il tipo di oggetto disegnato tramite la pressione di questo pulsante, per permetterne il riconoscimento al metodo \textit{bindCanvas} in modo da associare correttamente la figura da disegnare al suo pulsante.
-\end{elencopuntato}
 
 \subsezione{TextButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
@@ -641,19 +626,6 @@ Classe concreta che rappresenta la tavolozza dei colori presente al di sotto del
 \item[-]  \textit{setColour(col,prec1,prec2)} cambia il colore di bordo o riempimento della figura al seguito di un click dell'utente sullla tavolozza, prendendo il colore attualmente impostato e modificando uno dei due parametri a seconda del valore selezionato sul combobox a fianco. Ritorna la nuova coppia di colori bordo-riempimento.
 \item[-]  \textit{rgbToHex(rgb)} prende il valore rgb passato dalla ruota dei colori \textit{Farbtastic} e ritorna la sua rappresentazione esadecimale.
 \end{elencopuntato}
-
-\subsezione{PaletteComponent}
-\subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe concreta che rappresenta un singolo colore presente sulla tavolozza.
-\subsubsezione{Relazioni d'uso di altre componenti}
-\subsubsezione{Interfacce e relazioni di uso da altre componenti}
-\subsubsezione{Attivit\`a svolte e dati trattati}
-\textit{Page} e \textit{Palette} ne mantengono pi\`u istanze.
-\paragrafo{Attributi privati:}
-\begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{{\_}color} colore rappresentato dal componente.
-\end{elencopuntato}
-
 
 \subsezione{ColourDialog}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
@@ -724,7 +696,31 @@ Legge e modifica \textit{Rotation}.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \paragrafo{Metodi pubblici:}
 
+\subsezione{FontSetter}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Classe concreta che rappresenta l'oggetto che si occupa di modificare il tipo di carattere della casella di testo da disegnare o selezionata.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Legge e modifica \textit{TextFont}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\textit{PropertiesDialog} ne mantiene un'istanza.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\paragrafo{Metodi pubblici:}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{FontSetter(font)} costruttore. Prende un \textit{TextFont} e setta il valore di un campo a scelta multipla di un dialog statico implementato in HTML. Il campo contiene il tipo di carattere attuale di \textit{font}. Collega un evento al pulsante di conferma del dialog, e se l'utente ha modificato il tipo di carattere, modifica \textit{en} ed esegue un refresh.
+\end{elencopuntato}
 
+\subsezione{TextStringSetter}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Classe concreta che rappresenta l'oggetto che si occupa di modificare la stringa della casella di testo da disegnare o selezionata.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Legge e modifica \textit{TextString}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\textit{PropertiesDialog} ne mantiene un'istanza.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\paragrafo{Metodi pubblici:}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{TextStringSetter(text)} costruttore. Prende un \textit{TextString} e setta il valore di un campo di un dialog statico implementato in HTML. Il campo contiene la stringa attuale di \textit{text}. Collega un evento al pulsante di conferma del dialog, e se l'utente ha modificato la stringa, modifica \textit{txt} ed esegue un refresh.
+\end{elencopuntato}
 
 
 %%%%%%%%Parte Dissegna
@@ -937,6 +933,25 @@ Usata dalla classe \textit{Text} che ne mantiene un'istanza.
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{toCSS()} ritorna {\_}name.
 \item[-] \textit{applyToContext(context)} setta l'attributo \textit{font} del contesto grafico alla propria rappresentazione CSS.
+\item[-] \textit{createWidget} crea e ritorna un'istanza di \textit{FontSetter} passando se stesso come parametro al costruttore.
+\end{elencopuntato}
+
+\subsezione{TextString}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta la stringa di un testo. Mantiene la stringa attualmente scritta.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Deriva da \textit{TextProperty}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Usata dalla classe \textit{Text} che ne mantiene un'istanza.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\paragrafo{Attributi privati:}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{{\_}name} stringa di testo da scrivere o scritta.
+\end{elencopuntato}
+\paragraph{Metodi pubblici:}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{get/setName} permette di ottenere, o di modificare, la stringa di testo della casella.
+\item[-] \textit{createWidget} crea e ritorna un'istanza di \textit{TextStringSetter} passando se stesso come parametro al costruttore.
 \end{elencopuntato}
 
 \subsezione{BoundingRectangle}
