Adattato ClearCanvasButton per barra

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -380,21 +380,19 @@ Classe concreta che rappresenta un generico pulsante tramite il quale effettuare
 
 \subsezione{ClearCanvasButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe concreta che rappresenta lo specifico pulsante svuota il canvas.
+Classe concreta che rappresenta lo specifico pulsante che si occupa di svuotare totalmente il canvas, integrato nella sezione "Modifica" della barra in alto.
 \subsubsezione{Relazioni d'uso di altre componenti}
-Estende \textit{Button}.
+%Estende \textit{Button}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
 \subsubsezione{Attivit\`a svolte e dati trattati}
-\textit{Page} e \textit{Toolbar} ne mantengono un' istanza.
+%\textit{Page} ne mantiene un' istanza.
 \paragrafo{Attributi privati:}
-\begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{{\_}id} l'attibuto HTML \textit{id} del pulsante.
-\end{elencopuntato}
+%\begin{elencopuntato}[\subsubsecindent]
+%\item[-] \textit{{\_}id} l'attibuto HTML \textit{id} del pulsante.
+%\end{elencopuntato}
 \paragrafo{Metodi pubblici:}
-\begin{elencopuntato}[\subsubsecindent]
-\item[-] \textit{getId()} ritorna  \textit{{\_}id};
-\item[-]  \textit{clearCanvas(canvas,visual,figureSet)} cancella completamente il contenuto del canvas (tramite \textit{clear()}) e del Figure Set tramite la funzione \textit{rem(f)} applicata ad ogni figura caricata nel set. 
-\end{elencopuntato}
+%\begin{elencopuntato}[\subsubsecindent]
+%\end{elencopuntato}
 
 \subsezione{SelectionButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
