DP: sistemata struttura tracciamento

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -1359,7 +1359,7 @@ Nessuna.
 \sezione{Tracciamento della relazione componenti - requisiti}
 
 
-\subsezione{Tracciamento Componenti - Resuisiti}
+\subsezione{Tracciamento Componenti - Requisiti}
 \begin{table}[h]
 \begin{center}
      \begin{tabular}
@@ -1432,7 +1432,7 @@ Nessuna.
   \label{tab:requisitiGUI}
   \end{center}
 \end{table}
-
+\newpage
 
 \begin{table}[h]
 \begin{center}
@@ -1506,6 +1506,7 @@ Nessuna.
   \label{tab:requisitiAL}
   \end{center}
 \end{table}
+\newpage
 
 \begin{table}[h]
 \begin{center}
@@ -1542,7 +1543,7 @@ Nessuna.
   \label{tab:requisitiDocBackend}
   \end{center}
 \end{table}
-
+\newpage
 
 \subsezione{Tracciamento Requisiti - Componenti}
 \begin{table}[h]
@@ -1572,7 +1573,7 @@ Nessuna.
       \hline
       RFO-8 & SelectionButton, FigureSet, Figure\\
       \hline
-      RFO-9 & Palette, PaletteComponent, ColourDialog, Colour, FillColour, TextColour, Opacity, CssProperty\\
+      \multirow{2}{*}{RFO-9} & Palette, PaletteComponent, ColourDialog, Colour,\\ & FillColour, TextColour, Opacity, CssProperty\\
       \hline
       RFO-10 & BoundingRectangleSetter, SelectionButton, BoundingRectangle\\
       \hline
@@ -1584,9 +1585,9 @@ Nessuna.
       \hline
       RFO-14 & Scale, Visualization, ZoomButton, ZoomInButton, ZoomOutButton\\
       \hline
-      RFO-15 & SVGWriter, SVGGenerator, Request, CommunicationError, ConnectionError, ServerError, Server, FileNotFound, File, Clean\\
+      \multirow{2}{*}{RFO-15} & SVGWriter, SVGGenerator, Request, CommunicationError, \\ & ConnectionError, ServerError, Server, FileNotFound, File, Clean\\
       \hline
-      RFO-16 & SVGReader, SVGGenerator, SVGElementRegistry, XMLParser, Request, CommunicationError, ConnectionError, ServerError, Server\\
+      \multirow{2}{*}{RFO-16} & SVGReader, SVGGenerator, SVGElementRegistry, XMLParser, \\ & Request, CommunicationError, ConnectionError, ServerError, Server\\
       \hline
       RFO-17 & Canvas, ClearCanvasButton\\
       \hline
