--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Manuale Utente} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -142,9 +142,6 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-          0.2 & 06/03/2008 Inserito manuale installazione e avvio di Tomcat per sistemi Linux & Dal Bosco Davide \\
-    	  \hline
-          0.1 & 04/03/2008 Inserito manuale installazione e avvio di Tomcat per sistemi Windows & Dal Bosco Davide \\
     	  \hline
     	  0.0 & 27/02/2008 Prima stesura & \\
 
@@ -217,15 +214,12 @@ Il programma non necessita di installazione.
 
 \subsubsezione{Lato server}
 Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: Apache Tomcat. Oltre a essere un Web Server, Tomcat \`e anche un
-Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio Java.\\
-\\
-Prima di tutto \`e necessario disporre di una Java Virtual Machine. Per il download visitare il link al sito ufficiale della Sun Microsystem:\\
-http://java.com/download/index.jsp\\
-\\
-Per effettuare il download di Apache Tomcat 6.0 andare al link del sito ufficiale \textit{http://tomcat.apache.org/download-60.cgi}\\
+Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio Java.
+Prima di tutto bisogna scaricare Tomcat dal link del sito ufficiale \textit{http://tomcat.apache.org/download-60.cgi}\\
 Nella sezione \textit{Binary Distribution} della pagina web, \`e possibile effettuare il download sia per sistemi Windows che per sistemi Linux.\\
-\\\\
+\\
 \indent{\textbf{Installazione su sistemi Windows:}}\\
+\\
 Terminato il download, fare doppio click sul file scaricato per iniziare l'installazione.\\
 La schermata \`e la seguente:
 
@@ -247,7 +241,7 @@ Giunti alla schermata per la scelta della cartella di installazione, mantenere q
 
 Premere \textit{Next}, e si presenter\`a la finestra di configurazione di Tomcat:
 Alla voce \textit{http/1.1 Connector Port} lasciare il valore di default (di solito 8080), quindi impostare una User Name e Password a scelta necessarie per accedere alla configurazione di Tomcat.\\
-Quindi premere \textit{Next}.
+premere \textit{Next}.
 
 \begin{figure}[!ht]
 \centering
@@ -266,65 +260,58 @@ Per completare l'installazione, premere su \textit{Install}.
 \end{figure} 
 
 \indent{\textbf{Installazione su sistemi Linux:}}\\
-Scaricato il .tar.gz, estrarre il contenuto su una cartella.
-Non \`e necessaria una installazione vera e propria e per la sua esecuzione si rimanda al paraggrafo \textit{Avvio del programma} sezione \textit{Linux}.
+%\\
+%Scaricato il .tar.gz, estrarre il contenuto su una cartella. 
+%Aprire una shell e posizionarsi sulla cartella estratta.
+%A questo punto \`e necessario provare ad avviare il processo di Tomcat. Per farlo, eseguire i seguenti comandi:\\
+\textit{cd bin}\\
+\textit{./catalina.sh start}\\
+
+%Se tutto è andato per il meglio. dovrebbe comparire una scritta tipo:\\
+%\textit{Using CATALINA_BASE: /home/red/apache-tomcat-6.0.14}\\
+%Using CATALINA_HOME: /home/red/apache-tomcat-6.0.14\\
+%Using CATALINA_TMPDIR: /home/red/apache-tomcat-6.0.14/temp\\
+%Using JRE_HOME: /usr/lib/jvm/java-6-sun-1.6.0.03\\
+\\
+%Avviare un browser e inserire l'indirizzo \textit{http://localhost:8080}\\
+%Se compare la pagina principale di Tomcat, significa il Web Server funziona correttamente.
+%A questo punto, \`e necessario procedere alla configurazione dell'utente amministratore per poter usare il Tomcat Manager.
+%Per fare questo, da shell, spostarsi nella cartella principale di Tomcat ed eseguire i seguenti comandi:\\
+%\textit{cd conf}\\
+%\textit{sudo gedit tomcat-users.xml}\\
+%Sostituire il file aperto, con il seguente codice:\\
+%<?xml version='1.0' encoding='utf-8'?>\\
+%<tomcat-users>\\
+%  <role rolename="manager"/>\\
+%  <role rolename="admin"/>\\
+%  <user username="admin" password="admin" roles="manager"/>\\
+%</tomcat-users> \\
+%\\
+%In questo modo \`e stato impostato uno User Name con valore \textit{admin} e una Password con valore \textit{admin]. Queste credenziali sono da usare per accedere al Tomcat Manager.\\
+%A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
+%Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
+%Andare nella sezione \textit{WAR file to deploy} della pagina.
+
+\newpage
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/DeployTomcat.png}
+\caption{Deploy}
+\end{figure} 
+
+Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
 
 \subsezione{Avvio del programma}
 \subsubsezione{Lato client}
 \`E sufficiente aprire la pagina web con un browser supportato. L'indirizzo dipende dall'host in cui viene installato il server.
 \subsubsezione{Lato server}
-Sono presenti due sezioni per effettuare l'avvio su sistemi Windows e su sistemi Linux.\\
-\\\\
-\indent{\textbf{Avvio del programma su sistemi Windows:}}\\
-Per l'avvio del server, andare su \textit{Start-$ > $Programmi-$ > $Apache Tomcat 6.0} e avviare \textit{Monitor Tomcat}.
+Per l'avvio del server, andare su \textit{Start--Programmi--Apache Tomcat 6.0} e avviare \textit{Monitor Tomcat}.
 Nella barra delle applicazioni in esecuzione, apparir\`a l'icona che indica l'avvio di Tomcat.\\
-A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
-Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
-Andare nella sezione \textit{WAR file to deploy} della pagina.\\
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.7]{images/DeployTomcat.png}
-\caption{Deploy}
-\end{figure} 
-
-Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
-A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione.\\ 
-\\\\
-\indent{\textbf{Avvio del programma su sistemi Linux:}}\\
-Aprire una shell e posizionarsi sulla cartella di Apache Tomcat (precedentemente estratta).
-A questo punto \`e necessario provare ad avviare il processo di Tomcat. Per farlo, eseguire i seguenti comandi:\\
-\\
-\textit{cd bin}\\
-\textit{./catalina.sh start}\\
-
-Se tutto \`e andato per il meglio, dovrebbero comparire i path di CATALINA e JRE.\\
-%Using CATALINA_BASE: /home/red/apache-tomcat-6.0.14\\
-%Using CATALINA\{_}HOME: /home/red/apache-tomcat-6.0.14\\
-%Using CATALINA\{_}TMPDIR: /home/red/apache-tomcat-6.0.14/temp\\
-%Using JRE\{_}HOME: /usr/lib/jvm/java-6-sun-1.6.0.03\\
-\\
-Avviare un browser e inserire l'indirizzo \textit{http://localhost:8080}\\
-Se compare la pagina principale di Tomcat, significa che il Web Server funziona correttamente.
-A questo punto, \`e necessario procedere alla configurazione dell'utente amministratore per poter usare il Tomcat Manager.
-Per fare questo, da shell, spostarsi nella cartella principale di Tomcat ed eseguire i seguenti comandi:\\
-\\
-\textit{cd conf}\\
-\textit{sudo gedit tomcat-users.xml}\\
-\\
-Sostituire il file aperto, con il seguente codice:\\
-\\
-\textit{$ < $?xml version='1.0' encoding='utf-8'?$ > $}\\
-\textit{$ < $tomcat-users$ > $}\\
-\textit{  $ < $role rolename='manager'/$ > $}\\
-\textit{  $ < $role rolename='admin'/$ > $}\\
-\textit{  $ < $user username='admin' password='admin' roles='manager'/$ > $}\\
-\textit{$ < $/tomcat-users$ > $} \\
-\\
-In questo modo \`e stato impostato uno User Name con valore \textit{admin} e una Password con valore \textit{admin}. Queste credenziali sono da usare per accedere al Tomcat Manager.\\
 A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
 Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
 Andare nella sezione \textit{WAR file to deploy} della pagina.
 
+\newpage
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.7]{images/DeployTomcat.png}
@@ -332,6 +319,8 @@ Andare nella sezione \textit{WAR file to deploy} della pagina.
 \end{figure} 
 
 Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
+A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione. 
+
 
 \subsezione{Descrizione funzionale - Lato client}
 \subsubsezione{Il Menu}
@@ -346,11 +335,14 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 Nella sezione \textit{File} \`e possibile salvare il lavoro effettuato sul proprio computer in formato \underline{svg}, oppure caricare un lavoro realizzato in precedenza.
 Per aprire un file si deve selezionare \textit{File > Carica} e inserire il percorso del file nel dialog che si aprir\`a oppure selezionarlo cliccando sul pulsante \textit{Sfoglia}. 
 Per salvare un file si deve selezionare \textit{File > Salva} e inserire un nome nel dialog che si aprir\`a in seguito e confermare la scelta. Comparir\`a un link che permette di scaricare il file.
+La sezione \textit{Modifica} permette di effettuare una pulizia totale di tutte le figure presenti sull'area di disegno.
 La sezione \textit{Visualizza} permette di visualizzare i dialog delle propriet\`a nel caso fossero stati chiusi tramite il tasto di chiusura in alto a destra (la classica X). \textit{Colori} si riferisce alla finestra che modifica i colori di una figura mentre \textit{Propriet\`a} gestisce la posizione e la dimensione di una figura.
-Infine la sezione \textit{About} permette di visualizzare informazioni sul prodotto e sull'azienda sviluppatrice.
+Infine la sezione \textit{Guida} permette di visualizzare un manuale consultabile on line, informazioni sul prodotto e sull'azienda sviluppatrice.
+
 
 \subsubsezione{La Toolbar}
 Le funzioni di disegno del programma sono accessibili attraverso i bottoni presenti nel lato sinistro dell'interfaccia grafica. Cliccando su un pulsante si attiva la funzione desiderata. Il puntatore del mouse cambia a seconda della funzione di disegno scelta, nei browser che lo supportano.
+
 
 \begin{figure}[!ht]
 \centering
@@ -358,7 +350,10 @@ Le funzioni di disegno del programma sono accessibili attraverso i bottoni prese
 \caption{Selezione}
 \end{figure} 
 
+\vspace{100pt}
 Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura. Selezionata una figura, tutti i suoi parametri sono visualizzati nelle finestre grafiche sulla destra. \`E possibile spostare i punti evidenziati cliccando su di essi e trascinare il mouse tenendo premuto il pulsante. Rilasciare il pulsante per fermare lo spostamento. Modificando questi punti \`e possibile modificare le dimensioni delle figure, e nel caso delle linee a mano libera e delle curve di bezier \`e possibile spostare i punti per cui passano le tangenti alle curve. Cliccando e tenendo premuto il pulsante sinistro del mouse dentro ad una figura \`e possibile spostarla all'interno dell'area di disegno.
+\newpage
+
 
 \begin{figure}[!ht]
 \centering
@@ -368,6 +363,7 @@ Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura. S
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Ellisse}. Si deve fare click nella pozione in cui si vuole disegnare la figura (vertice alto a sinistra della figura), poi col puntatore del mouse premuto si modifica la dimensione della figura. Seguendo la stessa procedura \`e possibile disegnare rettangoli dopo aver selezionato il relativo strumento.
+\newpage
 
 \begin{figure}[!ht]
 \centering
@@ -375,18 +371,20 @@ Qui \`e stata selezionata la funzione \textit{Ellisse}. Si deve fare click nella
 \caption{Disegno di un Poligono regolare}
 \end{figure} 
 
-\vspace{300pt}
+\vspace{100pt}
 Qui \`e stato disegnato un \textit{poligono regolare}. L'unica differenze rispetto ad ellissi e rettangoli consiste nella finestra di propriet\`a a destra dell'interfaccia grafica, che permette di modificare il numero di lati del poligono inserendo il valore desiderato a fianco dell'etichettta \textit{N. di lati} e confermando tale scelta cliccando sul bottone \textit{Cambia}.
+\newpage
 
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.5]{images/mano.png}
 \caption{Strumento Mano per spostare, trascinare le figure}
 \end{figure} 
-\newpage
 
-\vspace{300pt}
+
+\vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Mano}. Cliccando in un punto qualsiasi del \underline{canvas} \`e possibile cambiare l'area di disegno correntemente visualizzata spostando il mouse mantenendo premuto il tasto sinistro.
+\newpage 
 
 \begin{figure}[!ht]
 \centering
@@ -394,10 +392,10 @@ Qui \`e stata selezionata la funzione \textit{Mano}. Cliccando in un punto quals
 \caption{Disegno a mano libera}
 \end{figure} 
 
-\newpage
 
-\vspace{300pt}
+\vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). \`E possibile tracciare una linea a mano libera tenendo premuto il pulsante sinistro del mouse e muovendo il mouse.
+\newpage
 
 \begin{figure}[!ht]
 \centering
@@ -405,8 +403,11 @@ Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando s
 \caption{Disegno di una retta}
 \end{figure} 
 
-\vspace{300pt}
+
+\vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Disegno di una retta}. Si deve tenere premuto il pulsante sinistro del mouse e spostare il cursore per disegnare la linea retta. La fine della retta \`e determinata dal rilascio del pulsante del mouse.
+\newpage
+
 
 \begin{figure}[!ht]
 \centering
@@ -414,8 +415,10 @@ Qui \`e stata selezionata la funzione \textit{Disegno di una retta}. Si deve ten
 \caption{Etichetta di testo}
 \end{figure} 
 
-\vspace{300pt}
+
+\vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve cliccare sull'area di disegno per scegliere la posizione del testo ed utilizzare la finestra di propriet\`a a destra per cambiare il testo dell'etichetta ed il font.
+\newpage
  
 \begin{figure}[!ht]
 \centering
@@ -431,7 +434,7 @@ Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve clicc
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto \`e possibile aumentare o diminuire lo zoom della percentuale desiderata mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
- 
+%\newpage 
 
 \begin{figure}[!ht]
 \centering
@@ -441,6 +444,7 @@ Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare man
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione \textit{Curva di Bezier}. Per disegnare la curva, si deve fare click sul piano di disegno dove si desidera disegnare la curva. Il punto selezionato sar\`a il punto iniziale della curva, poi eseguire due click sul piano di disegno per descrivere i due punti controllo per cui passeranno le tangenti alla curva ed infine un ultimo click per selezionare il punto finale della curva.
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% FINE TOOLBAR %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% BOTTONI E DIALOG %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -449,17 +453,17 @@ Qui \`e stata selezionata la funzione \textit{Curva di Bezier}. Per disegnare la
 \vspace{100pt}
 Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno. Si consiglia di salvare prima di cancellare per evitare di perdere il lavoro svolto finora.
 
-%\begin{figure}[!ht]
-%\centering
-%\includegraphics[scale=0.4]{images/cancella_elemento_prima.png}
-%\caption{Cancellazione di un elemento di disegno  - PRIMA}
-%\end{figure} 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/cancella_elemento_prima.png}
+\caption{Cancellazione di un elemento di disegno  - PRIMA}
+\end{figure} 
 
-%\begin{figure}[!ht]
-%\centering
-%\includegraphics[scale=0.4]{images/cancella_elemento_dopo.png}
-%\caption{Cancellazione di un elemento di disegno  - DOPO}
-%\end{figure}
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/cancella_elemento_dopo.png}
+\caption{Cancellazione di un elemento di disegno  - DOPO}
+\end{figure}
 
 \vspace{100pt}
 Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura correntemente selezionata cliccando sul pulsante suddetto. La medesima funzione pu\`o essere svolta da tastiera premendo il tasto \textit{Canc}.
@@ -509,11 +513,11 @@ Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento d
 \caption{cambio numero lati di un poligono  - PRIMA}
 \end{figure} 
 
-%\begin{figure}[!ht]
-%\centering
-%\includegraphics[scale=0.4]{images/numero_lati_dopo.png}
-%\caption{cambio numero lati di un poligono  - DOPO}
-%\end{figure} 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/numero_lati_dopo.png}
+\caption{cambio numero lati di un poligono  - DOPO}
+\end{figure} 
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato. \\
